--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-numpy==1.26.4
-pandas>=1.1.3
-regex>=2.5.86
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
-scikit-learn>=1.0.2
+numpy>=2.3.5
+pandas>=2.3.3
+regex>=2025.11.3
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+scikit-learn>=1.8.0
 joblib>=1.5.2
 streamlit>=1.53.0
-thinc==8.2.5
+thinc>=8.3.10
